Minor CSS fix for tab wrap when is first element

--- a/css/input.css
+++ b/css/input.css
@@ -474,6 +474,10 @@ ul.acf-checkbox-list li label {
 	display: none;
 }
 
+.acf-postbox .acf-tab-wrap:first-child .acf-tab-group {
+	border-top: 0 none;
+}
+
 
 /*
 *  Box
